--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.2",
     "@types/react-icons": "^3.0.0",
+    "mobile-detect": "^1.4.5",
     "next": "12.2.5",
-    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-multi-carousel": "^2.8.2",
+    "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "18.7.3",
@@ -23,6 +25,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "yarn": "^1.22.19"
   }
 }
