--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,7 @@ jobs:
     - run: yarn install
     - run: yarn run build
     - run: yarn run export
+    - run: touch /out/.nojekyll
 
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4.2.5
