--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-multi-carousel": "^2.8.2",
+    "react-responsive-modal": "^6.2.0",
     "react-yandex-maps": "^4.6.0",
     "react-youtube-background": "^1.0.0"
   },
