--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.9",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-multi-carousel": "^2.8.2",
