--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.4.0",
     "react-multi-carousel": "^2.8.2",
     "react-responsive-modal": "^6.2.0",
+    "react-text-mask": "^5.5.0",
     "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
