--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.2",
+    "@svgr/webpack": "^6.5.1",
     "axios": "^1.2.1",
     "formik": "^2.2.9",
     "next": "12.2.5",
